# openvino-rm-yolo-face

./: README.md  main.py
cpp/: CMakeLists.txt  main.cpp  ovinference.cpp  ovinference.h
model/: rm-net11.xml
python/: main.py
